@@ -1,3 +1,7 @@
+drkns 06.07.2016 23:04:32 +0200 - build 4738
+
+1. Coverity warnings.
+
 drkns 06.07.2016 00:46:21 +0200 - build 4737
 
 1. Рефакторинг.
